--- a/package.json
+++ b/package.json
@@ -1,30 +1,60 @@
 {
 
   "type": "module",
+
   "name": "kanbas-node-server-app",
+
   "version": "1.0.0",
+
   "description": "Node.js HTTPS for kanbas-react-app",
+
   "main": "index.js",
+
   "scripts": {
+
     "test": "echo \"Error: no test specified\" && exit 1",
+
     "start": "nodemon app.js"
+
   },
+
   "repository": {
+
     "type": "git",
+
     "url": "git+https://github.com/hypnosw/kanbas-node-server-app.git"
+
   },
+
   "keywords": [
+
     "Node.js",
+
     "REST",
+
     "JavaScript"
+
   ],
+
   "author": "Hypnos W",
+
   "license": "ISC",
+
   "bugs": {
+
     "url": "https://github.com/hypnosw/kanbas-node-server-app/issues"
+
   },
+
   "homepage": "https://github.com/hypnosw/kanbas-node-server-app#readme",
+
   "dependencies": {
+
+    "cors": "^2.8.5",
+
     "express": "^4.18.2"
+
   }
+
 }
+
