--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 
     "test": "echo \"Error: no test specified\" && exit 1",
 
-    "start": "nodemon app.js"
+    "start": "node app.js"
 
   },
 
