--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3000,https://a5--mellow-druid-bd88f7.netlify.app/
